ja/9.0/config/logging.rst
==========
ログの設定
==========

ログのファイル
==============

|Fess| が出力するログファイルを以下にまとめます。

+-----------------------------------------------+-----------------------------------------------------------------------------+
| ファイル名                                    | 内容                                                                        |
+-----------------------------------------------+-----------------------------------------------------------------------------+
| webapps/fess/WEB-INF/logs/fess.out            | |Fess| サーバのログ。管理画面や検索画面で操作した時のログなどが出力される。   |
+-----------------------------------------------+-----------------------------------------------------------------------------+
| webapps/fess/WEB-INF/logs/fess\_crawler.out   | クロール時のログ。クロール実行時のログが出力される。                        |
+-----------------------------------------------+-----------------------------------------------------------------------------+
| logs/catalina.out                             | |Fess| サーバ(Tomcat)のログ。Tomcat 関連のログが出力される。                  |
+-----------------------------------------------+-----------------------------------------------------------------------------+
| logs/solr.log                                 | |Fess| サーバ(Solr)のログ。Solr 関連のログが出力される。                      |
+-----------------------------------------------+-----------------------------------------------------------------------------+

Table: ログファイル一覧


動作に問題が発生した場合には上記のログを確認してください。

ログの設定
==========

ログを出力する内容は、webapps/fess/WEB-INF/classes/log4j.xml
で設定します。デフォルトでは INFO レベルとして出力しています。

たとえば、 |Fess| が Solr
に対してドキュメントを投入処理をするログをより出力したい場合は log4j.xml
で以下の部分をコメントアウトから外します。

::

    <logger name="jp.sf.fess.solr" >
        <level value ="debug" />
    </logger>

ログ出力に関する細かい設定が必要な場合は、Log4J
のドキュメントを参照してください。

クロールの通信内容
------------------

問題解決するために、クロール時の HTTP
アクセスの内容を確認したい場合は、HttpClient
のログレベルを変更することで確認することができます。

::

    <logger name="org.apache.http" >
        <level value ="debug" />
    </logger>
